--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+::-webkit-scrollbar {
+      width: 0px;
+  }
+.all-bottom{
+    width: 100%;
+    background: #333;
+    height: 66px;
+    color: #fff;
+    font-size: 12px;
+  }
 * {
   margin: 0;
   padding: 0;
