--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -5,16 +5,7 @@ body,
 #app {
   height: auto;
 }
-.swiper-container{
-    height:400px;
-    margin-top:80px;
-    left: 0;
-    background: #fff;
-  }
-  .swiper-slide{
-    width: 33%;
-    height: 400px;
-  }
+  
   .swiper-slide img{
     width: 100%;
     height: 100%;
@@ -48,18 +39,51 @@ body,
     border-left: 1px solid #fb5f3c;
     padding-left: 10px;
   }
-  .img-item img{
-    width: 100%;
-    height:300px;
-    object-fit: cover;
-
+  @media all and (min-width: 800px) {
+    .img-item{
+      width: 25%;
+      box-sizing: border-box;
+      padding:10px;
+    }
+    .img-item img{
+      width: 100%;
+      height:300px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+    .swiper-slide{
+      height: 400px;
+    }
+    .swiper-container{
+      height:400px;
+      margin-top:80px;
+      left: 0;
+      background: #fff;
+    }
   }
-  .img-item{
-    width: 25%;
-    box-sizing: border-box;
-    padding:10px;
-    box-sizing: border-box;
+  @media all and (max-width: 800px) {
+    .img-item{
+      width: 50%;
+      box-sizing: border-box;
+      padding:5px;
+    }
+    .img-item img{
+      width: 100%;
+      height:150px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+    .swiper-slide{
+      height: 200px;
+    }
+    .swiper-container{
+      height:200px;
+      margin-top:80px;
+      left: 0;
+      background: #fff;
+    }
   }
+  
   .img-item div{
     font-size: 14px;
     height: 40px;
